Feat: Working on form Validation.

--- a/src/index.css
+++ b/src/index.css
@@ -162,10 +162,45 @@ main {
 
 form {
   margin-bottom: 6rem;
+  display: grid;
+}
+
+.name {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 24px;
 }
 
 form label{
   display: block;
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 6px;
+}
+
+.input::placeholder {
+  padding-left: 14px;
+}
+
+input {
+  padding: 10px 14px;
+  border: 1px solid #D0D5DD;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+
+.radio {
+  display: flex;
+  align-items: center;
+}
+
+.input[type='radio'] {
+  background-color: red;
+}
+
+.radio label {
+  padding-left: 10px;
 }
 
 
